tools/qcloud/iptables-filter
# Generated by iptables-save v1.4.21 on Fri Jan  6 17:42:59 2017
*filter
:INPUT ACCEPT [71:9650]
:FORWARD ACCEPT [1:60]
:OUTPUT ACCEPT [63:10092]
:DOCKER - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-SERVICES - [0:0]
-A INPUT -s 192.168.0.0/24 -p tcp -m tcp --dport 2375 -j ACCEPT
-A INPUT -s 172.16.0.0/12 -p tcp -m tcp --dport 2375 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p tcp -m tcp --dport 2375 -j ACCEPT
-A INPUT -p tcp -m addrtype --src-type LOCAL -m tcp --dport 2375 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p tcp -m tcp --dport 10250 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p tcp -m tcp --dport 10255 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2375 -j DROP
-A INPUT -p tcp -m tcp --dport 10250 -j DROP
-A INPUT -p tcp -m tcp --dport 10255 -j DROP
-A INPUT -j KUBE-FIREWALL
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A OUTPUT -j KUBE-FIREWALL
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
COMMIT
# Completed on Fri Jan  6 17:42:59 2017
