tools/qcloud/iptables-filter-blackboard
# Generated by iptables-save v1.4.21 on Fri Jan  6 17:42:59 2017
*filter
:INPUT ACCEPT [71:9650]
:FORWARD ACCEPT [1:60]
:OUTPUT ACCEPT [63:10092]
:DOCKER - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-SERVICES - [0:0]
-A INPUT -p tcp -s 10.2.1.5 --dport 11211 -j ACCEPT
-A INPUT -p tcp -s 10.2.0.3 --dport 11211 -j ACCEPT
-A INPUT -p tcp --dport 11211 -j DROP
-A INPUT -p udp --dport 11211 -j DROP
-A INPUT -s 10.0.0.0/8 -p tcp -m multiport --dport 10250,10255 -j ACCEPT
-A INPUT -s 172.16.0.0/12 -p tcp -m multiport --dport 10250,10255 -j ACCEPT
-A INPUT -p tcp -m addrtype --src-type LOCAL -m multiport --dport 10250,10255 -j ACCEPT
-A INPUT -p tcp -m multiport --dport 10250,10255 -j DROP
-A INPUT -s 10.0.0.0/8 -p tcp -m multiport --dport 2375,3306,4001,7001,9200,11211,16020,60010,60000,60030 -j ACCEPT
-A INPUT -s 172.16.0.0/12 -p tcp -m multiport --dport 2375,3306,4001,7001,9200,11211,16020,60010,60000,60030 -j ACCEPT
-A INPUT -p tcp -m addrtype --src-type LOCAL -m multiport --dport 2375,3306,4001,7001,9200,11211,16020,60010,60000,60030 -j ACCEPT
-A INPUT -p tcp -m multiport --dport 2375,3306,4001,7001,9200,11211,16020,60010,60000,60030 -j DROP
-A INPUT -j KUBE-FIREWALL
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A OUTPUT -j KUBE-FIREWALL
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
COMMIT
# Completed on Fri Jan  6 17:42:59 2017
